# diff-man

./: Cargo.toml
src/: diff.rs  lib.rs  parser.rs
test_data/: dlang_long.udiff  middle.after  middle.before  middle.diffs  simple.after  simple.before  simple.diffs
test_data/composition/: middle_app.diffs  middle_rev.diffs  simple_app.diffs  simple_rev.diffs
